<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="180dp"
    android:layout_marginBottom="180dp"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_add_value_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/popup_add_value_view_repair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/popup_add_value_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/popup_add_value_close_desc" />

    <View
        android:id="@+id/popup_add_value_view_repair"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_add_value_close"/>

    <EditText
        android:id="@+id/popup_add_value_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:hint="@string/popup_add_value_textinput_hint"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_add_value_view_repair"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/popup_add_value_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/popup_add_value_confirm_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_add_value_textinput" />

    <RadioGroup
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_add_value_confirm_button">
        <RadioButton
            android:id="@+id/popup_add_value_radio_heavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_navbar_heavy"/>
        <RadioButton
            android:id="@+id/popup_add_value_radio_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_navbar_long"/>
        <RadioButton
            android:id="@+id/popup_add_value_radio_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_navbar_ten"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>